Job parameters common for every build step delivered by ServiceNow

--- a/src/main/resources/io/jenkins/plugins/servicenow/ApplyChangesBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/ApplyChangesBuilder/config.properties
@@ -1,8 +1,9 @@
 Url=Url
-Username=User name
-Password=Password
+UrlDescr=ServiceNow instance url
+Credentials=Credentials
+CredentialsDescr=User name and password defined in global credentials (credentials ID is required here)
 ApiVersion=API version
-ApiVersionDescr=API version or leave it empty if the last one should be taken.
+ApiVersionDescr=ServiceNow API version or leave it empty if the last one should be taken.
 AppScope=Application scope
 AppSysId=Application system id
 BranchName=Branch name
