--- a/src/main/resources/io/jenkins/plugins/servicenow/InstallAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/InstallAppBuilder/config.properties
@@ -1,12 +1,10 @@
 Url=Url
-UrlDescr=ServiceNow instance url
+UrlDescr=ServiceNow instance url where the application should be installed to
 Credentials=Credentials
 CredentialsDescr=User name and password defined in global credentials (credentials ID is required here)
 ApiVersion=API version
 ApiVersionDescr=ServiceNow API version or leave it empty if the last one should be taken.
 AppScope=Application scope
 AppSysId=Application system id
-DevNotes=Developer notes
-DevNotesDescr=Developer notes to store with the application.
 Version=Application version
-VersionDescr=Version under which to store the application. Provide 2 significant numbers separated by dot eg. 1.0 (the third number will be automatically added with build number, what gives eg. 1.0.106).
+VersionDescr=Published version to be installed. If empty, the published version will be used.
