New option for the task 'Publish application': Get application version from source control. Increment the version taken from source control.

--- a/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
@@ -10,3 +10,5 @@ DevNotes=Developer notes
 DevNotesDescr=Developer notes to store with the application.
 Version=Application version
 VersionDescr=Version under which to store the application. Provide 2 significant numbers separated by dot eg. 1.0 (the third number will be automatically added with build number, what gives eg. 1.0.106).
+GetVersionFromSC=Get application version from source control
+GetVersionFromSCDescr=Calculate new application version that will be published, based on the version from source control. SCM must be configured with the build.
