SNDP-48 Change label of the field ShowResults in the form of the step 'run tests'.

--- a/src/main/resources/io/jenkins/plugins/servicenow/RunTestSuiteWithResultsBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/RunTestSuiteWithResultsBuilder/config.properties
@@ -10,4 +10,4 @@ OsName= OS name
 OsVersion= OS version
 BrowserName= Browser name
 BrowserVersion= Browser version
-ShowResults=Download results?
+ShowResults=Show results
