SNDP-35 Added tooltips for build steps parameters

--- a/src/main/resources/io/jenkins/plugins/servicenow/ActivatePluginBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/ActivatePluginBuilder/config.properties
@@ -1,8 +1,8 @@
 Url=Url
-UrlDescr=ServiceNow instance url where the plugin should be rolled back.
+UrlDescr=ServiceNow instance url where the plugin should be activated.
 Credentials=Credentials
 CredentialsDescr=User name and password defined in global credentials (credentials ID is required here)
 ApiVersion=API version
-ApiVersionDescr=ServiceNow API version or leave it empty if the last one should be taken.
+ApiVersionDescr=Optional. Version of the endpoint to access. For example, v1 or v2. Only specify this value to use an endpoint version other than the latest.
 PluginId=Plugin identifier
-PluginIdDescr=Unique identifier of the plugin to be activated.
+PluginIdDescr=Unique identifier of the plugin. You can locate this identifier on the Plugins page within the card of the desired plugin; identified with the name "ID".
