--- a/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
@@ -1,14 +1,16 @@
 Url=Url
-UrlDescr=ServiceNow instance url
+UrlDescr=ServiceNow instance url where the application will be published to
 Credentials=Credentials
 CredentialsDescr=User name and password defined in global credentials (credentials ID is required here)
 ApiVersion=API version
-ApiVersionDescr=ServiceNow API version or leave it empty if the last one should be taken.
+ApiVersionDescr=Optional. Version of the endpoint to access. For example, v1 or v2. Only specify this value to use an endpoint version other than the latest.
 AppScope=Application scope
 AppSysId=Application system id
+AppScopeDescr=Required if <code>application system id</code> is not specified. The scope name of the application for which to apply the changes, such as x_aah_custom_app. You can locate this value in the scope field in the Custom Application [sys_app] table.
+AppSysIdDescr=Required if <code>application scope</code> is not specified. The system id of the application for which to apply the changes. You can locate this value in the Sys ID field in the Custom Application [sys_app] table.
 DevNotes=Developer notes
 DevNotesDescr=Developer notes to store with the application.
 Version=Application version
-VersionDescr=Version under which to store the application. Provide 2 significant numbers separated by dot eg. 1.0 (the third number will be automatically added with build number, what gives eg. 1.0.106).
+VersionDescr=Version under which to store the application. Provide 2 significant numbers separated by '.' eg. 1.0 (the third number will be automatically added with build number, what gives eg. 1.0.106).<br/>If the version number is passed, the publish process uses that version and updates the local application version if different. If the version number is not passed, the publish process uses the current version of the local application.
 GetVersionFromSC=Get application version from source control
-GetVersionFromSCDescr=Calculate new application version that will be published, based on the version from source control. SCM must be configured with the build.
+GetVersionFromSCDescr=Calculate new application version that will be published, based on the version from source control. SCM must be configured with the build.<br/><strong>The value from ''Application version'' will be ignored.</strong>
