--- a/src/main/resources/io/jenkins/plugins/servicenow/ApplyChangesBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/ApplyChangesBuilder/config.properties
@@ -3,8 +3,10 @@ UrlDescr=ServiceNow instance url
 Credentials=Credentials
 CredentialsDescr=User name and password defined in global credentials (credentials ID is required here)
 ApiVersion=API version
-ApiVersionDescr=ServiceNow API version or leave it empty if the last one should be taken.
+ApiVersionDescr=Optional. Version of the endpoint to access. For example, v1 or v2. Only specify this value to use an endpoint version other than the latest.
 AppScope=Application scope
+AppScopeDescr=Required if <code>application system id</code> is not specified. The scope name of the application for which to apply the changes, such as x_aah_custom_app. You can locate this value in the scope field in the Custom Application [sys_app] table.
 AppSysId=Application system id
+AppSysIdDescr=Required if <code>application scope</code> is not specified. The system id of the application for which to apply the changes. You can locate this value in the Sys ID field in the Custom Application [sys_app] table.
 BranchName=Branch name
-BranchNameDescr=Branch name of the repository, where all changes should be applied from.
+BranchNameDescr=Name of the branch in the source control system from which to acquire the application.
