--- a/src/main/resources/io/jenkins/plugins/servicenow/RollbackAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/RollbackAppBuilder/config.properties
@@ -6,5 +6,7 @@ ApiVersion=API version
 ApiVersionDescr=ServiceNow API version or leave it empty if the last one should be taken.
 AppScope=Application scope
 AppSysId=Application system id
+AppScopeDescr=Required if <code>application scope</code> is not specified. The scope name of the application to rollback.
+AppSysIdDescr=Required if <code>scope</code> is not specified. The system id of the application to rollback.
 RollbackVersion=Application rollback version
-RollbackVersionDescr=Previous version of the installed application which will be used by the rollback action.
+RollbackVersionDescr=Expected rollback version. This version is compared to the version that is contained in the last rollback context, if they don't match, the build step fails.<br/>If empty, installed version from previous step will be taken.
