--- a/pom.xml
+++ b/pom.xml
@@ -187,9 +187,9 @@
 
     <developers>
       <developer>
-        <id>kamilgo</id>
-        <name>Kamil Goliński</name>
-        <email>kgoli@softserveinc.com</email>
+        <id>chiarng.lin</id>
+        <name>ServiceNow</name>
+        <email>devproductivity@servicenow.com</email>
       </developer>
     </developers>
 
