SNDP-71 Publish application - User can't save app version

--- a/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
@@ -6,4 +6,4 @@ AppScope=Application scope
 AppSysId=Application system id
 DevNotes=Developer notes
 Version=Application version
-GetVersionFromSCDescr=Calculate new application version that will be published, based on the version from source control. SCM must be configured with the build.<br/><strong>The value from ''Application version'' will be ignored.</strong>
+GetVersionFromSC=Get application version from source control
