Added new global parameter 'Progress check interval' within ServiceNow Parameters.

--- a/src/main/resources/io/jenkins/plugins/servicenow/parameter/ServiceNowParameterDefinition/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/parameter/ServiceNowParameterDefinition/config.properties
@@ -6,6 +6,7 @@ SysId=System ID
 AppScope=Application scope
 PublishedAppVersion=Published application version
 RollbackAppVersion=Rolled back application version
+ProgressCheckInterval=Progress check interval [ms]
 
 InstanceForPublishedAppUrlDescr=ServiceNow instance url where the application will be published to
 CredentialsForPublishedAppDescr=User name and password defined in global credentials (credentials ID is required here) used for the instance where the application will be published.
