--- a/src/main/resources/io/jenkins/plugins/servicenow/parameter/ServiceNowParameterDefinition/index.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/parameter/ServiceNowParameterDefinition/index.properties
@@ -7,6 +7,7 @@ SysId=System ID
 AppScope=Application scope
 PublishedAppVersion=Published application version
 RollbackAppVersion=Rolled back application version
+ProgressCheckInterval=Progress check interval [ms]
 
 InstanceForPublishedAppUrlDescr=ServiceNow instance url where the application will be published to
 CredentialsForPublishedAppDescr=User name and password defined in global credentials (credentials ID is required here) used for the instance where the application will be published.
@@ -16,3 +17,4 @@ AppScopeDescr=Required if <code>application system ID</code> is not specified. T
 SysIdDescr=Required if <code>application scope</code> is not specified. The system id of the application for which to apply the changes. You can locate this value in the Sys ID field in the Custom Application [sys_app] table.
 PublishedAppVersionDescr=Version number of published application (that will be also installed if appropriate build step will be used). Do not fill the field up if you want to get the number automatically (depends on the build step 'Publish application').
 RollbackAppVersionDescr=Version number of the application used by the step 'Roll back application'.<br/>Do not fill this field up if the version should be obtained automatically.
+ProgressCheckIntervalDescr=Time in milliseconds between one and another progress check set up for all build steps of ServiceNow.
