--- a/src/main/resources/io/jenkins/plugins/servicenow/parameter/ServiceNowParameterValue/value.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/parameter/ServiceNowParameterValue/value.properties
@@ -6,3 +6,4 @@ SysId=System ID
 AppScope=Application scope
 PublishedAppVersion=Published application version
 RollbackAppVersion=Rolled back application version
+ProgressCheckInterval=Progress check interval [ms]
