Resolve automatically new version of the application to be published using SN API.

--- a/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
@@ -6,4 +6,4 @@ AppScope=Application scope
 AppSysId=Application system id
 DevNotes=Developer notes
 Version=Application version
-GetVersionFromSC=Get application version from source control
+GetVersionAutomatically=Calculate next application version
