SNDP-76: Build Step enhancement for /sn_cicd/app_repo/install for app customization feature

--- a/src/main/resources/io/jenkins/plugins/servicenow/InstallAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/InstallAppBuilder/config.properties
@@ -4,3 +4,5 @@ ApiVersion=API version
 AppScope=Application scope
 AppSysId=Application system id
 Version=Application version
+BaseAppAutoUpgrade=Upgrade base application
+BaseAppVersion= Version of base application
