SNDP-80 Enhancements. Publishing and 'increment by' logic. Workaround for empty WORKSPACE in environment vars.

--- a/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
@@ -6,4 +6,5 @@ AppScope=Application scope
 AppSysId=Application system id
 DevNotes=Developer notes
 Version=Application version
-GetVersionAutomatically=Calculate next application version
+GetVersionAutomatically=Configure auto-increment settings for version being published
+IncrementBy=Increment version by
