SNDP-80 Added new parameter isAppCustomization to the build step snPublishApp.

--- a/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/PublishAppBuilder/config.properties
@@ -8,3 +8,4 @@ DevNotes=Developer notes
 Version=Application version
 GetVersionAutomatically=Configure auto-increment settings for version being published
 IncrementBy=Increment version by
+IsAppCustomization=The application is customized
