Documentation update for new release.

--- a/src/main/resources/io/jenkins/plugins/servicenow/BatchInstallBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/BatchInstallBuilder/config.properties
@@ -2,7 +2,7 @@ Url=Url
 Credentials=Credentials
 ApiVersion=API version
 UseFile= Use manifest file
-BatchFile=Batch file
+BatchFile=Manifest file
 Name=Batch name
 Packages=Packages
 Notes=Notes
