--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>servicenow-cicd</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>2.1</version>
     <packaging>hpi</packaging>
     <name>ServiceNow CI/CD Plugin</name>
     <description>This plugin provides build steps for integration with ServiceNow using CI/CD APIs.</description>
@@ -34,7 +34,7 @@
     <scm>
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-        <tag>${scmTag}</tag>
+        <tag>servicenow-cicd-2.1</tag>
         <url>https://github.com/${gitHubRepo}</url>
     </scm>
 
