--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>servicenow-cicd</artifactId>
-    <version>2.1</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <name>ServiceNow CI/CD Plugin</name>
     <description>This plugin provides build steps for integration with ServiceNow using CI/CD APIs.</description>
@@ -34,12 +34,12 @@
     <scm>
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-        <tag>servicenow-cicd-2.1</tag>
+        <tag>${scmTag}</tag>
         <url>https://github.com/${gitHubRepo}</url>
     </scm>
 
     <properties>
-        <revision>2.1</revision>
+        <revision>2.2</revision>
         <changelist>-SNAPSHOT</changelist>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
         <jenkins.version>2.361.4</jenkins.version>
