--- a/pom.xml
+++ b/pom.xml
@@ -134,10 +134,10 @@
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
-                <!-- Provided by plugin parent POM --> 
+                <!-- Provided by plugin parent POM -->
                 <exclusion>
                     <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
+                    <artifactId>javax.servlet-api</artifactId>
                 </exclusion>
                 <!-- Provided by commons-lang3-api plugin -->
                 <exclusion>
